[package]
name = "yusuke-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
eframe = "0.30.0"
jni = "0.21.1"
jvmti = "0.5.0"
regex = "1.11.1"
winapi = { version = "0.3.9", features = ["consoleapi", "libloaderapi", "processenv", "winbase", "wincon"] }
windows = { version = "0.59.0", features = ["System", "Win32", "Win32_System_SystemServices"] }
zip = "2.2.2"
