[package]
name = "yusuke-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
rfd = "0.15.1"
winapi = { version = "0.3.8", features = ["tlhelp32", "errhandlingapi", "memoryapi", "libloaderapi", "consoleapi", "minwindef", "processenv", "winbase", "handleapi", "wingdi", "windef", "winuser", "winbase" ] }
regex = "1.11.1"
tiny_http = "0.12.0"
rand = "0.8.5"
open = "5.3.1"
url = "2.5.4"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["rt"] }
